--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+.title{
+    text-align: center;
+}
 
 
 html, body{
@@ -55,5 +58,17 @@ ul#menu a:hover{
     float: rigth;
     padding: 0 10px;
     height: 80%;
+    width: calc(80% - 20px);
     background-color: azure;
+}
+
+footer {
+    clear: both;
+    text-align: left;
+    color: aliceblue;
+    font-size: 0.8em;
+    padding: 15px 5px;
+    border-top: 5px solid transparent;
+    height: calc(10€ - 35px);
+
 }
