--- a/style/style.css
+++ b/style/style.css
@@ -169,15 +169,29 @@ footer {
   input {
     max-width: 80px;
   }
-  .p-images{
+  .img4{
     display: flex;
-    width: 100px;
+    width: 200px;
     height: 100px;
-    justify-content: space-between;
+  }
+  .img5{
+    display: flex;
+    width: 270px;
+    height: 200px;
+    position: absolute;
+    right: 100px;
+    
+  }
+  .img6{
+    display: flex;
+    width: 300px;
+    height: 100px;
+    position: absolute;
+    right: 600px;
+    bottom: 3px;
+
   }
   textarea {
     max-width: 500px;
     max-height: 500px;
-
   }
-  
