--- a/style/style.css
+++ b/style/style.css
@@ -167,13 +167,14 @@ footer {
   }
  .img7{
     display: flex;
-    width: 200px;
+    width: 500px;
     height: 100px;
-
+    position: absolute;
+    right: 500px;
  }
  .img8{
     display: flex;
-    width: 200px;
+    width: 400px;
     height: 100px;
  }
  fieldset {
